@@ -4,6 +4,7 @@
  * (c) 2020 Prof Dr Andreas Müller, Hochschule Rapperswil
  */
 #include <AstroCamera.h>
+#include <AstroFormat.h>
 
 namespace astro {
 namespace camera {
@@ -28,6 +29,13 @@ CoolerInfo::CoolerInfo(Cooler& cooler)
 	: _actualTemperature(cooler.getActualTemperature()),
 	  _setTemperature(cooler.getSetTemperature()),
 	  _on(cooler.isOn()) {
+}
+
+std::string	CoolerInfo::toString() const {
+	return stringprintf("actual=%.1f, set=%.1f, on=%s",
+		_actualTemperature.celsius(),
+		_setTemperature.celsius(),
+		(_on) ? "yes" : "no");
 }
 
 } // namespace camera
